refactor: refactored to use only 1 endpoint instead of 3
