# backend/openapi.yaml
@@ -328,7 +328,65 @@ paths:
         '525':
           description: SSL handshake failed
         '526':
-          description: Invalid SSL certificateÏ
+          description: Invalid SSL certificate
+
+  /campaign/{campaignId}/cancel:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - Campaigns
+      summary: Cancels the scheduling of the campaign
+      parameters:
+        - name: campaignId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '201':
+          description: Successfully cancelled the campaign
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden, campaign not owned by user
+        '429':
+          description: Rate limit exceeded. Too many requests.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorStatus'
+              example:
+                {
+                  status: 429,
+                  message: Too many requests. Please try again later.,
+                }
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              example: Internal Server Error
+        '502':
+          description: Bad Gateway
+        '504':
+          description: Gateway Timeout
+        '503':
+          description: Service Temporarily Unavailable
+        '520':
+          description: Web Server Returns An Unknown Error
+        '521':
+          description: Web Server Is Down
+        '522':
+          description: Connection Timed Out
+        '523':
+          description: Origin Is Unreachable
+        '524':
+          description: A Timeout occurred
+        '525':
+          description: SSL handshake failed
+        '526':
+          description:
+            Invalid SSL certificate
   /campaign/{campaignId}/email:
     get:
       security:
@@ -1661,63 +1719,6 @@ paths:
         '526':
           description: Invalid SSL certificate
 
-  /campaign/{campaignId}/email/cancel:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - SMS
-      summary: Cancels the scheduling of the campaign
-      parameters:
-        - name: campaignId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Successfully cancelled the campaign
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden, campaign not owned by user
-        '429':
-          description: Rate limit exceeded. Too many requests.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorStatus'
-              example:
-                {
-                  status: 429,
-                  message: Too many requests. Please try again later.,
-                }
-        '500':
-          description: Internal Server Error
-          content:
-            text/plain:
-              example: Internal Server Error
-        '502':
-          description: Bad Gateway
-        '504':
-          description: Gateway Timeout
-        '503':
-          description: Service Temporarily Unavailable
-        '520':
-          description: Web Server Returns An Unknown Error
-        '521':
-          description: Web Server Is Down
-        '522':
-          description: Connection Timed Out
-        '523':
-          description: Origin Is Unreachable
-        '524':
-          description: A Timeout occurred
-        '525':
-          description: SSL handshake failed
-        '526':
-          description:
-            Invalid SSL certificate
   /transactional/email/send:
     post:
       security:
@@ -3233,63 +3234,6 @@ paths:
           description: SSL handshake failed
         '526':
           description: Invalid SSL certificate
-  /campaign/{campaignId}/sms/cancel:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - SMS
-      summary: Cancels the scheduling of the campaign
-      parameters:
-        - name: campaignId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Successfully cancelled the campaign
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden, campaign not owned by user
-        '429':
-          description: Rate limit exceeded. Too many requests.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorStatus'
-              example:
-                {
-                  status: 429,
-                  message: Too many requests. Please try again later.,
-                }
-        '500':
-          description: Internal Server Error
-          content:
-            text/plain:
-              example: Internal Server Error
-        '502':
-          description: Bad Gateway
-        '504':
-          description: Gateway Timeout
-        '503':
-          description: Service Temporarily Unavailable
-        '520':
-          description: Web Server Returns An Unknown Error
-        '521':
-          description: Web Server Is Down
-        '522':
-          description: Connection Timed Out
-        '523':
-          description: Origin Is Unreachable
-        '524':
-          description: A Timeout occurred
-        '525':
-          description: SSL handshake failed
-        '526':
-          description:
-            Invalid SSL certificate
   /transactional/sms/send:
     post:
       security:
@@ -4544,64 +4488,8 @@ paths:
         '525':
           description: SSL handshake failed
         '526':
-          description: Invalid SSL c
-  /campaign/{campaignId}/telegram/cancel:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - SMS
-      summary: Cancels the scheduling of the campaign
-      parameters:
-        - name: campaignId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Successfully cancelled the campaign
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden, campaign not owned by user
-        '429':
-          description: Rate limit exceeded. Too many requests.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorStatus'
-              example:
-                {
-                  status: 429,
-                  message: Too many requests. Please try again later.,
-                }
-        '500':
-          description: Internal Server Error
-          content:
-            text/plain:
-              example: Internal Server Error
-        '502':
-          description: Bad Gateway
-        '504':
-          description: Gateway Timeout
-        '503':
-          description: Service Temporarily Unavailable
-        '520':
-          description: Web Server Returns An Unknown Error
-        '521':
-          description: Web Server Is Down
-        '522':
-          description: Connection Timed Out
-        '523':
-          description: Origin Is Unreachable
-        '524':
-          description: A Timeout occurred
-        '525':
-          description: SSL handshake failed
-        '526':
-          description:
-            Invalid SSL certificate
+          description: Invalid SSL certificate
+
 components:
   securitySchemes:
     bearerAuth:
